--- a/static/partials/create_conferences.html
+++ b/static/partials/create_conferences.html
@@ -85,7 +85,7 @@
                            class="form-control"/>
                 </div>
 
-                <button ng-click="createConference(conferenceForm)" class="btn btn-primary"
+                <button ng-click="create_conference(conferenceForm)" class="btn btn-primary"
                         ng-disabled="!isValidConference(conferenceForm) || loading">Create
                 </button>
             </form>
